[gd_scene load_steps=8 format=2]

[ext_resource path="res://fonts/CutiveMono-Regular.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://sprites/sub.png" type="Texture" id=2]
[ext_resource path="res://scenes/Credits.gd" type="Script" id=3]

[sub_resource type="DynamicFont" id=1]
size = 48
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 32
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=3]
size = 24
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=4]
size = 32
font_data = ExtResource( 1 )

[node name="Credits" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ScrollContainer" type="ScrollContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
scroll_horizontal_enabled = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ScrollContents" type="Control" parent="ScrollContainer"]
margin_right = 1024.0
margin_bottom = 1960.0
grow_horizontal = 2
grow_vertical = 2
rect_min_size = Vector2( 1024, 1960 )

[node name="TitleStart" type="Label" parent="ScrollContainer/ScrollContents"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -70.0
margin_top = 240.0
margin_right = 70.0
margin_bottom = 19.0
grow_horizontal = 2
custom_fonts/font = SubResource( 1 )
text = "Silent Running"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Logo" type="TextureRect" parent="ScrollContainer/ScrollContents"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -150.0
margin_top = 280.0
margin_right = 150.0
margin_bottom = 212.0
texture = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Credits" type="VBoxContainer" parent="ScrollContainer/ScrollContents"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -20.0
margin_top = 640.0
margin_right = 20.0
margin_bottom = 40.0
grow_horizontal = 2
custom_constants/separation = 96
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Graphics" type="Label" parent="ScrollContainer/ScrollContents/Credits"]
margin_right = 585.0
margin_bottom = 36.0
grow_horizontal = 2
custom_fonts/font = SubResource( 2 )
text = "Graphics"
align = 1

[node name="HBoxContainer" type="HBoxContainer" parent="ScrollContainer/ScrollContents/Credits"]
margin_top = 132.0
margin_right = 585.0
margin_bottom = 190.0
custom_constants/separation = 240

[node name="Submarine" type="VBoxContainer" parent="ScrollContainer/ScrollContents/Credits/HBoxContainer"]
margin_right = 135.0
margin_bottom = 58.0
grow_horizontal = 2
alignment = 1

[node name="Asset" type="Label" parent="ScrollContainer/ScrollContents/Credits/HBoxContainer/Submarine"]
margin_right = 135.0
margin_bottom = 27.0
grow_horizontal = 2
custom_fonts/font = SubResource( 3 )
text = "Submarine"
align = 1

[node name="Creator" type="Label" parent="ScrollContainer/ScrollContents/Credits/HBoxContainer/Submarine"]
margin_top = 31.0
margin_right = 135.0
margin_bottom = 58.0
custom_fonts/font = SubResource( 3 )
text = "Guru Deep"

[node name="Torpedo" type="VBoxContainer" parent="ScrollContainer/ScrollContents/Credits/HBoxContainer"]
margin_left = 375.0
margin_right = 495.0
margin_bottom = 58.0
alignment = 1

[node name="Asset" type="Label" parent="ScrollContainer/ScrollContents/Credits/HBoxContainer/Torpedo"]
margin_right = 120.0
margin_bottom = 27.0
grow_horizontal = 2
custom_fonts/font = SubResource( 3 )
text = "Torpedo"
align = 1

[node name="Creator" type="Label" parent="ScrollContainer/ScrollContents/Credits/HBoxContainer/Torpedo"]
margin_top = 31.0
margin_right = 120.0
margin_bottom = 58.0
grow_horizontal = 2
custom_fonts/font = SubResource( 3 )
text = "Barbulat"
align = 1

[node name="Audio" type="Label" parent="ScrollContainer/ScrollContents/Credits"]
margin_top = 286.0
margin_right = 585.0
margin_bottom = 322.0
grow_horizontal = 2
custom_fonts/font = SubResource( 2 )
text = "Audio"
align = 1

[node name="HBoxContainer2" type="HBoxContainer" parent="ScrollContainer/ScrollContents/Credits"]
margin_top = 418.0
margin_right = 585.0
margin_bottom = 476.0
custom_constants/separation = 240

[node name="Ping" type="VBoxContainer" parent="ScrollContainer/ScrollContents/Credits/HBoxContainer2"]
margin_right = 210.0
margin_bottom = 58.0
grow_horizontal = 2
alignment = 1

[node name="Asset" type="Label" parent="ScrollContainer/ScrollContents/Credits/HBoxContainer2/Ping"]
margin_right = 210.0
margin_bottom = 27.0
grow_horizontal = 2
custom_fonts/font = SubResource( 3 )
text = "Ping"
align = 1

[node name="Creator" type="Label" parent="ScrollContainer/ScrollContents/Credits/HBoxContainer2/Ping"]
margin_top = 31.0
margin_right = 210.0
margin_bottom = 58.0
custom_fonts/font = SubResource( 3 )
text = "NoiseCollector"

[node name="Impact" type="VBoxContainer" parent="ScrollContainer/ScrollContents/Credits/HBoxContainer2"]
margin_left = 450.0
margin_right = 585.0
margin_bottom = 58.0
alignment = 1

[node name="Asset" type="Label" parent="ScrollContainer/ScrollContents/Credits/HBoxContainer2/Impact"]
margin_right = 135.0
margin_bottom = 27.0
grow_horizontal = 2
custom_fonts/font = SubResource( 3 )
text = "Impact"
align = 1

[node name="Creator" type="Label" parent="ScrollContainer/ScrollContents/Credits/HBoxContainer2/Impact"]
margin_top = 31.0
margin_right = 135.0
margin_bottom = 58.0
grow_horizontal = 2
custom_fonts/font = SubResource( 3 )
text = "Speedenza"
align = 1

[node name="HBoxContainer3" type="HBoxContainer" parent="ScrollContainer/ScrollContents/Credits"]
margin_top = 572.0
margin_right = 585.0
margin_bottom = 630.0
custom_constants/separation = 240
alignment = 1

[node name="Music" type="VBoxContainer" parent="ScrollContainer/ScrollContents/Credits/HBoxContainer3"]
margin_left = 202.0
margin_right = 382.0
margin_bottom = 58.0
grow_horizontal = 2
alignment = 1

[node name="Asset" type="Label" parent="ScrollContainer/ScrollContents/Credits/HBoxContainer3/Music"]
margin_right = 180.0
margin_bottom = 27.0
grow_horizontal = 2
custom_fonts/font = SubResource( 3 )
text = "Music"
align = 1

[node name="Creator" type="Label" parent="ScrollContainer/ScrollContents/Credits/HBoxContainer3/Music"]
margin_top = 31.0
margin_right = 180.0
margin_bottom = 58.0
custom_fonts/font = SubResource( 3 )
text = "ZakharValaha"

[node name="TitleEnd" type="Label" parent="ScrollContainer/ScrollContents"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -70.0
margin_top = 1500.0
margin_right = 70.0
margin_bottom = 19.0
grow_horizontal = 2
custom_fonts/font = SubResource( 1 )
text = "Silent Running"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Author" type="Label" parent="ScrollContainer/ScrollContents"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -65.0
margin_top = 1800.0
margin_right = 65.0
margin_bottom = 19.0
grow_horizontal = 2
custom_fonts/font = SubResource( 4 )
text = "by Huw Taylor"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Back" type="Button" parent="."]
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = 24.0
margin_top = -60.0
margin_right = 42.0
margin_bottom = -24.0
custom_fonts/font = SubResource( 3 )
text = "Back"
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="scroll_ended" from="ScrollContainer" to="." method="_on_scroll_ended"]
[connection signal="scroll_started" from="ScrollContainer" to="." method="_on_scroll_started"]
[connection signal="pressed" from="Back" to="." method="_on_Back"]
